# TestesDeSistema-ETA-Grupo-7

./: README.md  pyproject.toml
pages/: AccountPage.py  AddCustomerPage.py  BasePage.py  CustomerPage.py  CustomersListPage.py  LoginPage.py  ManagerPage.py  OpenAccountPage.py  TransactionsPage.py
tests/: conftest.py  test_1.py  test_10.py  test_11.py  test_12.py  test_2.py  test_3.py  test_4.py  test_5.py  test_6.py  test_7.py  test_8.py  test_9.py
