[project]
name = "testesdesistema-eta-grupo-7"
version = "0.1.0"
description = ""
authors = [
    {name = "André Dantas",email = "andre.dantas@nepen.org.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "selenium (>=4.34.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
